[package]
name = "the_os"
version = "0.1.0"
authors = ["Michael Heinrichs <michael.heinrichs@rwth-aachen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.6.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"